# zentui

./: Cargo.toml  LICENSE  README.md
src/: credentials.rs  edit.rs  github.rs  main.rs  settings.rs  zenhub.rs
src/app/: issue_card.rs  mod.rs  pipeline.rs  prompt.rs
