[package]
name = "zentui"
version = "0.1.0"
authors = ["Marius Cobzarenco <marius@reinfer.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
clap = "3.0.0-beta.1"
flexi_logger = "0.15.4"
log = "0.4.8"
once_cell = "1.4.0"
reqwest = { version = "0.10.6", default-features = false, features = ["blocking", "gzip", "json", "rustls-tls"] }
serde = "1.0.112"
serde_json = "1.0.55"

zi = { path = "/home/marius/w/zee/zi" }
dirs = "2.0.2"
serde_derive = "1.0.112"
toml = "0.5.6"
